Prevent mobile title overflow on long video titles
Bug: T334059

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -347,7 +347,7 @@
 }
 #results-container .video-results-wrapper .video-results-header h5 {
   margin-right: auto;
-  white-space: nowrap;
+  white-space: normal;
   overflow: hidden;
   text-overflow: ellipsis;
 }
